# auto-tcp-socket-response

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc
forms/: MainWindow.ui
includes/: AutoSocket.hpp  MainWindow.hpp  TcpSocketClient.hpp
src/: AutoSocket.cpp  MainWindow.cpp  TcpSocketClient.cpp  main.cpp
